ProductCatalog/KubeFiles/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: productcatalogapi
spec:
    replicas: 1
    selector:
        matchLabels:
            component: api
    template:
        metadata:
            labels:
                component: api   
        spec:
            containers:
                - name: productcatalogapi
                  image: nandank81/productcatalogapi
                  ports:
                    - containerPort: 80
