ProductCatalog/KubeFiles/sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: productcatalogdb
spec:
    replicas: 1
    selector:
        matchLabels:
            component: db
    template:
        metadata:
            labels:
                component: db   
        spec:
            containers:
                - name: productcatalogdb
                  image: mcr.microsoft.com/mssql/server
                  ports:
                    - containerPort: 1433
