ProductCatalog/KubeFiles/api-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
    name: api-cluster-ip-service
spec:
    type: ClusterIP
    ports:
        - port: 5001
          targetPort: 80
    selector:
        component: api
