ProductCatalog/KubeFiles/db-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
    name: db-cluster-ip-service
spec:
    type: ClusterIP
    ports:
        - port: 1533
          targetPort: 1433
    selector:
        component: db
