ProductCatalog/KubeFiles/ui-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
    name: ui-cluster-ip-service
spec:
    type: ClusterIP
    ports:
        - port: 5002
          targetPort: 80
    selector:
        component: productcatalogui
